--- a/lola/hackathon_lola_wip.ipynb
+++ b/lola/hackathon_lola_wip.ipynb
@@ -190,8 +190,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -220,11 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "source": [
     "### Features:\n",
     "\n",
@@ -242,11 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 1067,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "'''\n",
@@ -473,6 +464,34 @@
    ],
    "source": [
     "df.female.value_counts(dropna = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "256\n",
+      "244\n",
+      "950\n",
+      "711\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_woman = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) woman \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
+    "s_man = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) man \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
+    "s_male = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) male \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
+    "s_female = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) female \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
+    "\n",
+    "print(len(s_woman))\n",
+    "print(len(s_man))\n",
+    "print(len(s_male))\n",
+    "print(len(s_female))"
    ]
   },
   {
@@ -1465,17 +1484,7 @@
      ]
     }
    ],
-   "source": [
-    "s_woman = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) woman \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
-    "s_man = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) man \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
-    "s_male = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) male \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
-    "s_female = sum(list(df['cleaned'].map(lambda s: re.findall(r\"\\S*(?:\\s\\S+) female \\S*(?:\\s\\S+)?\\S*(?:\\s\\S+)?\",s))), [])\n",
-    "\n",
-    "print(len(s_woman))\n",
-    "print(len(s_man))\n",
-    "print(len(s_male))\n",
-    "print(len(s_female))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
